PIP-521 Sonar report tidy up